fix: layout issues on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -27,5 +27,5 @@ body {
 #app {
   display: grid;
   place-items: center;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
